--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,14 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <geotools.version>27-SNAPSHOT</geotools.version>
+    <slf4j.version>1.5.11</slf4j.version>
   </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13.1</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
     <dependency>
       <groupId>org.geotools</groupId>
@@ -40,6 +41,13 @@
       <artifactId>gt-geojson</artifactId>
       <version>${geotools.version}</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.geotools/gt-xml -->
+    <dependency>
+      <groupId>org.geotools</groupId>
+      <artifactId>gt-xml</artifactId>
+      <version>26.0</version>
+    </dependency>
+
     <!-- https://www.KuMaPai.com/open/com.vividsolutions/jts -->
     <dependency>
       <groupId>com.vividsolutions</groupId>
@@ -70,20 +78,12 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.5.11</version>
-      <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/log4j/log4j -->
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.14</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-nop -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-nop</artifactId>
-      <version>1.5.11</version>
-      <scope>test</scope>
     </dependency>
 
 
